test/should-fail/jfxc1630sub.visage
/**
 * @subtest
 */

package class jfxc1630sub {
  var x = 2;
}
